# junta

./: .gitignore  .gitmodules  README.md
junta-interfaz/: .env.template  package-lock.json  package.json
junta-interfaz/src/app/: layout.tsx  page.tsx
junta-interfaz/src/components/: Charts.tsx
junta-interfaz/src/stores/: sessionStore.ts
junta-interfaz/src/styles/: globals.css
junta-seo/seo-analyzer/: README.md  pyproject.toml  results.html
junta-seo/seo-analyzer/seo_analyzer/: __main__.py
junta-seo/seo-analyzer/seo_analyzer/analyze/: analyze.py
junta-seo/serpbear/: docker-compose.yaml
