[tool.poetry]
name = "seo-analyzer"
version = "0.1.0"
description = ""
authors = ["han-so1omon <esolomon1221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyseoanalyzer = "2024.4.21"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
